@@ -131,16 +131,17 @@
     };
 
     // assign any missing Enumerable methods
-    if (fuse.Enumerable) {
-      __max = fuse.Enumerable.max;
-      __min = fuse.Enumerable.min;
-
-      eachKey(fuse.Enumerable, function(value, key, object) {
-        if (hasKey(object, key) && typeof plugin[key] !== 'function') {
-          plugin[key] = value;
-        }
-      });
-    }
+    (function(mixin) {
+      if (mixin) {
+        __max = mixin.max;
+        __min = mixin.min;
+        eachKey(mixin, function(value, key, object) {
+          if (hasKey(object, key) && typeof plugin[key] !== 'function') {
+            plugin[key] = value;
+          }
+        });
+      }
+    })(fuse.Class.mixins.enumerable);
 
     // prevent JScript bug with named function expressions
     var _each = nil, clone = nil, max = nil, min = nil, size = nil, toArray = nil;
