@@ -9,7 +9,7 @@ var EnumObject = fuse.Class({
         callback(this.interior[key], key, this);
     }
   }
-}, fuse.Enumerable);
+}, fuse.Class.mixins.enumerable);
 
 var Selector = fuse.Class({
   'initialize': function(pattern) {
