@@ -1,3 +1,5 @@
+* Move fuse.Enumerable to fuse.Class.mixins.enumerable. [FuseJS LH #68] [jddalton]
+
 * Add fuse.dom.Event._addDispatcher and rename other implied private methods. [jddalton]
 
 * Add `skipDataInit` argument to fuse.dom.Node.getFuseId(). [jddalton]
